# zoizo

./: .dialyzer_ignore.exs  README.md  burn.sh  burn_mac.sh  mix.exs  upload.sh
config/: provisioning.conf  runtime.exs
lib/: scope.ex
lib/nerves_livebook/: application.ex  ttys0.ex  wifi_monitor.ex  zoizo.ex
lib/nerves_livebook/controls/: buttons.ex  event.ex
lib/nerves_livebook/input/: handler.ex
lib/nerves_livebook/physical_remote/: handler.ex  screen.ex  serial.ex
lib/scope/: application.ex  input_handler.ex  serial_server.ex  serial_utils.ex  ttys0.ex  zoizo.ex
lib/scope/input/: handler.ex
lib/scope/motors/: serial_motors.ex
lib/scope/physical_remote/: handler.ex  screen.ex  serial.ex  serial_remote.ex
motors/: motors.ino
native/zoizo/: Cargo.toml  README.md
native/zoizo/src/: lib.rs
rel/: env.sh.eex
remote/: remote.ino
scripts/: ci_create_firmware.sh
zoizo/: burn.sh  mix.exs
zoizo/config/: config.exs  host.exs  target.exs
zoizo/lib/scope/: application.ex  capture.ex  converter.ex  fwup.ex  input_handler.ex  serial_server.ex  serial_utils.ex  ui.ex  webcam.ex  webcam_server.ex  webui_communication.ex  wifi_monitor.ex  zoizo.ex
zoizo/motors/: motors.ino
zoizo/native/capture/: Cargo.toml
zoizo/native/zoizo/: Cargo.toml
zoizo/native/zoizo/src/: lib.rs
zoizoui/: .gitignore  README.md  mix.exs
zoizoui/assets/js/: app.js
zoizoui/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
zoizoui/lib/: zoizoui.ex  zoizoui_web.ex
zoizoui/lib/zoizoui/: application.ex  controls.ex  mailer.ex  webcam.ex
(+22 files in other folders)
